# wasm-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  grade.sh  main.cpp  vm_lib.cmake
inc/: common.h  inst_internal.h  ir.h
src/: inst_internal.cpp  ir.cpp  opcode_table.c  parse.cpp
tests/: Makefile
tests/ctests/: cmain_empty.c
